<resources>
    <string name="app_name">TripAssistant</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="password_criteria">At least 8 characters long\nAt least one uppercase letter\nAt least one lowercase letter\nAt least one digit\nAt least one special character (@#$%^&amp;+=)\nNo whitespaces allowed</string>
    <string name="back_button">Back button</string>
    <string name="back">Back icon</string>
    <string name="sign_out">Sign Out</string>
    <string name="email_not_available">Email not available</string>
    <string name="welcome_to_the_app">Welcome to the app!</string>
    <string name="back_button_description">Back to previous screen</string>
    <string name="password_criteria_uppercase">At least one uppercase letter</string>
    <string name="password_criteria_lowercase">At least one lowercase letter</string>
    <string name="password_criteria_number">At least one number</string>
    <string name="password_criteria_special_char">At least one special character (@#$%^&amp;+=)</string>
    <string name="password_criteria_length">At least 8 characters long</string>
    <string name="username">Username</string>
    <string name="user_profile_picture_description">profile picture</string>
    <string name="settings">Settings</string>
    <string name="sidebar_button_description">sidebar button</string>
    <string name="settings_button_description">settings icon</string>
    <string name="signout_button_description">sign out button</string>
    <string name="navigation_drawer_open">side bar</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="add_expense">Add expense</string>
    <string name="paid_by">Paid by</string>
    <string name="you">you</string>
    <string name="split_by">Split by</string>
    <string name="equally">equally</string>
    <string name="who_paid">Who paid?</string>
    <string name="adjust_split">Adjust split</string>
    <string name="google_maps_key" translatable="false">AIzaSyCAznj8pCSFwiLuuDyqLIcwSucnEV2K0KM</string>
    <string name="sample">Sample</string>
    <string name="tick">√</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unequally">Unequally</string>
    <string name="equally2">Equally</string>
    <string name="us">US$</string>
    <string name="_0_0">0.00</string>
    <string name="select_equally">Select which people owe an equal share.</string>
    <string name="specify_exactly_how_much_each_person_owes">Specify exactly how much each person owes.</string>
    <string name="dinner">Dinner</string>
    <string name="apr_15">Apr 15</string>
    <string name="not_involved">not involved</string>
    <string name="home">Home</string>
    <string name="expense_details">Expense details</string>
    <string name="description">Description</string>
    <string name="us_44_00">US$44.00</string>
    <string name="added_on_2023_04_15">Added on 2023/04/15</string>
    <string name="jade_paid_us_44_00">Jade paid US$44.00</string>
    <string name="us_money">US$%s</string>
    <string name="added_on">Added on %s</string>
    <string name="someone_paid">%s paid US$%s</string>
    <string name="leo_owes_us_33_00">Leo owes US$33.00</string>
    <string name="someone_owes">%s %s US$%s</string>
    <string name="history">History</string>
    <string name="balances">Balances</string>
    <string name="take_a_look_at_past_expenses_in_your_trip">Review past expenses from your trip.</string>
    <string name="balance_instruction">Review balances and settle them up.</string>
    <string name="add_new_expense">Add new expense</string>
    <string name="jade_owes">Jade owes</string>
    <string name="_23_12">$US23.12</string>
    <string name="to_herman">to Herman</string>
    <string name="settle_up">Settle up</string>
    <string name="payer_owes">%s owes</string>
    <string name="to_someone">to %s</string>
    <string name="you_lent">you lent US$%s</string>
    <string name="you_borrowed">you borrowed US$%s</string>
    <string name="remind">Remind</string>
    <string name="settle_up_info">%s paid %s US$%s</string>
    <string name="hello">Hello, %s!</string>
    <string name="payee_mark">payee mark</string>
    <string name="description_icon">Description icon</string>
    <string name="dollar_icon">Dollar icon</string>
    <string name="don_t_have_an_account">Don\'t have an account yet?</string>
    <string name="trip_name">Trip Name</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="create_trip">Create Trip</string>
    <string name="start_date">Start Date</string>
    <string name="member">Member</string>
    <string name="cancel">Cancel</string>
    <string name="add_stop_point">Add Stop Point</string>
    <string name="your_trips">Your trips</string>
</resources>
