<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/password_criteria_uppercase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_criteria_uppercase"
        android:textColor="@color/red"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/password_criteria_lowercase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_criteria_lowercase"
        android:textColor="@color/red"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/password_criteria_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_criteria_number"
        android:textColor="@color/red"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/password_criteria_special_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_criteria_special_char"
        android:textColor="@color/red"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/password_length_criteria_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_criteria_length"
        android:textColor="@color/red"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_criteria_special_char"/>

</LinearLayout>
