<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerInside"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_back"
            app:tint="@color/black"
            android:contentDescription="@string/back_button_description" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/expense_details"
            android:layout_gravity="center_vertical"
            android:textSize="24sp"
            android:textColor="@color/secondary"
            android:paddingHorizontal="12dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/amount_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/us_44_00"
        android:textSize="24sp"
        android:textColor="@color/primary"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp" />

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/added_on_2023_04_15"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp" />

    <TextView
        android:id="@+id/payer_text_view"
        android:text="@string/jade_paid_us_44_00"
        android:textColor="@color/secondary"
        android:textSize="20sp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/payee_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
