<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/back_button_description"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingHorizontal="12dp"
            android:text="@string/adjust_split"
            android:textColor="@color/secondary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/okay_button"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:backgroundTint="@color/wedgewood"
            android:text="@string/tick" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp">

        <Button
            android:id="@+id/equal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/green"
            android:text="@string/equally2"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/unequal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/unequally"
            android:textAllCaps="false"
            android:textColor="@color/green" />

    </LinearLayout>

    <TextView
        android:id="@+id/equal_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:text="@string/select_equally"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/unequal_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:text="@string/specify_exactly_how_much_each_person_owes"
        android:textSize="15sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/equalRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/unequalRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:visibility="gone" />

</LinearLayout>
