<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/transaction_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/payee_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/jade_owes"
                android:textColor="@color/secondary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/amount_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:text="@string/_23_12"
                android:textColor="@color/tangerine"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/payer_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:text="@string/to_herman"
                android:textColor="@color/secondary"
                android:textSize="16sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transaction_layout">

            <Button
                android:id="@+id/remind_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_toStartOf="@+id/settle_up_button"
                android:backgroundTint="@color/white"
                android:text="@string/remind"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="12sp" />

            <Button
                android:id="@+id/settle_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/green"
                android:text="@string/settle_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </RelativeLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
