<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/checklist_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/sample"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us"
            android:textColor="@color/primary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:autofillHints="share amount"
            android:buttonTint="@color/colorPrimary"
            android:hint="@string/_0_0"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="18sp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>